# moonshot-data

./: .gitignore  AUTHORS.md  LICENSE.md  NOTICES.md  README.md  a.out  export_api_connector_credentials.sh  pyproject.toml  requirements.txt
.ci/: gen_pre_build_summ.sh  run-codeql-summ.sh  run-flake8.sh  run-pip-audit.sh  run-test.sh
.github/: pre-build-checks.yaml
attack-modules/: artprompt_attack.py  artprompt_attack_module.py  attack_modules_config.json  cache.json  charswap_attack.py  charswap_attack_module.py  colloquial_wordswap_attack.py  colloquial_wordswap_attack_module.py  homoglyph_attack.py  homoglyph_attack_module.py  homoglyph_v2_attack.py  insert_punctuation_attack.py  insert_punctuation_attack_module.py  job_role_generator.py  malicious_question_generator.py  multiturn_agent.py  payload_mask_attack.py  sample_attack_module.py  sg_sentence_generator.py  textbugger_attack.py  textbugger_attack_module.py  textfooler_attack.py  textfooler_attack_module.py  toxic_sentence_generator.py  violent_durian.py  violent_orange.py
connectors/: amazon-bedrock-connector.py  anthropic-connector.py  azure-langchain-openai-chatopenai-connector.py  azure-langchain-openai-embedding-connector.py  azure-openai-connector.py  azure-openai-t2i-connector.py  claude2-connector.py  custom-sealion-connector.py  flageval-connector.py  google-gemini-connector.py  h2ogpte-connector.py  huggingface-connector.py  huggingface-local-connector.py  openai-connector.py  openai-t2i-connector.py  together-connector.py
connectors-endpoints/: amazon-bedrock-ai21-labs-j2-mid-connector.json  amazon-bedrock-ai21-labs-j2-ultra-connector.json  amazon-bedrock-ai21-labs-jamba-instruct-connector.json  amazon-bedrock-amazon-titan-text-g1-express-connector.json  amazon-bedrock-amazon-titan-text-g1-lite-connector.json  amazon-bedrock-anthropic-claude-3-5-sonnet-connector.json  amazon-bedrock-anthropic-claude-3-haiku-connector.json  amazon-bedrock-anthropic-claude-3-opus-connector.json  amazon-bedrock-anthropic-claude-3-sonnet-connector.json  amazon-bedrock-cohere-command-connector.json  amazon-bedrock-cohere-command-light-connector.json  amazon-bedrock-cohere-command-r-connector.json  amazon-bedrock-meta-llama-3-1-405b-instruct-connector.json  amazon-bedrock-meta-llama-3-1-70b-instruct-connector.json  amazon-bedrock-meta-llama-3-1-8b-instruct-connector.json  amazon-bedrock-meta-llama-3-70b-instruct-connector.json  amazon-bedrock-meta-llama-3-8b-instruct-connector.json  amazon-bedrock-mistral-ai-mistral-7b-instruct-connector.json  amazon-bedrock-mistral-ai-mistral-large-2-connector.json  amazon-bedrock-mistral-ai-mistral-large-connector.json  amazon-bedrock-mistral-ai-mixtral-8x7b-instruct-connector.json  anthropic-claude2.json  anthropic-claude4.5.json  azure-langchain-openai-chatopenai-gpt4o.json  azure-langchain-openai-embedding-ada-2.json  azure-openai-dalle.json  azure-openai-gpt4-turbo-preview.json  azure-openai-gpt4o.json  azure-openai.json  bad-model-a.json  claude2.json  flageval-flagjudge.json  google-gemini-15-flash.json  google-gemini-15-pro.json  google-gemini-flash-15.json  google-gemini-pro-15.json  h2ogpte-danube3.json  h2ogpte-endpoint.json  huggingface-deepseekr1.json  huggingface-gpt2.json  (+31 more)
context-strategy/: add_previous_prompt.py
cookbooks/: 1234.json  AISI-JT-ca.json  AISI-JT-cn.json  AISI-JT-en.json  AISI-JT-fa.json  AISI-JT-fr.json  AISI-JT-jp.json  AISI-JT-kr.json  AISI-JT-kw.json  AISI-JT-my.json  AISI-JT-tl.json  adversarial-attacks.json  answercarefully-cookbook-all-languages.json  chinese-safety-cookbook.json  clcc-cookbook.json  common-risk-easy.json  common-risk-hard.json  cyberseceval-cookbook-all-languages.json  data-disclosure.json  evaluation-catalogue-cookbook.json  hallucination-evaluation.json  hallucination-truncated.json  hallucination.json  leaderboard-cookbook.json  legal-summarisation.json  medical-llm-leaderboard.json  mlc-ai-safety.json  mlc-cookbook-all-languages.json  mlc-cookbook.json  my-jp-aisi-cookbook.json  rag-evaluation-cookbook.json  sg-fax.json  singapore-context.json  singapore-pofma-statements.json  tamil-language-cookbook.json  undesirable-content.json
databases-modules/: sqlite.py
datasets/: AnswerCarefully_ch.json  AnswerCarefully_en.json  AnswerCarefully_jp.json  AnswerCarefully_kr.json  advglue-all.json  analogical-similarity.json  answercarefully-ca.json  answercarefully-cn.json  answercarefully-en.json  answercarefully-fa.json  answercarefully-fr.json  answercarefully-jp.json  answercarefully-kr.json  answercarefully-kw.json  answercarefully-my.json  answercarefully-tl.json  artprompt-harmful-behaviors.json  auto-categorisation.json  bipia-abstract-test.json  bipia-abstract-train.json  bipia-email-test.json  bipia-email-train.json  bipia-table-test.json  bipia-table-train.json  cache.json  cause-and-effect.json  cbbq-lite-SES-disamb.json  cbbq-lite-age-ambiguous.json  cbbq-lite-disability-disamb.json  (+140 more)
(+244 files in other folders)
