[project]
name = "projectmoonshotdata-imda"
version = "0.0.1"
authors = [
    { name="The Moonshot Team", email="our.moonshot.team@gmail.com" }
]
description = "A collection of data(e.g. llm connectors, benchmark tests) that can be used with the Moonshot toolkit."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License"
]

[tool.poetry]
name = "moonshot-data"
version = "0.0.1"
description = "A collection of data(e.g. llm connectors, benchmark tests) that can be used with the Moonshot toolkit."
authors = ["The Moonshot Team <our.moonshot.team@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
openai = "1.38.0"
bert-score = "0.3.13"
nltk = "3.8.1"
py-readability-metrics = "1.4.5"
rouge = "1.0.1"
rouge-score = "0.1.2"
aiometer = "0.5.0"
aiohttp = "3.10.0"
anthropic = "0.32.0"
spacy = "3.7.5"
sentence-transformers = "3.0.1"
pylcs = "0.1.1"
together = "1.2.5"
scipy = "1.14.0"
textattack = "0.3.10"
tensorflow-hub = "0.16.1"
homoglyphs = "2.0.4"
tensorflow = "2.17.0"
urllib3 = "2.2.2"
xgboost = "2.1.1"
onnxruntime = "1.18.1"
