[project]
name = "moonshot-data"
version = "0.7.2"
authors = [
    { name="The Moonshot Team", email="our.moonshot.team@gmail.com" }
]
description = "A collection of data(e.g. llm connectors, benchmark tests) that can be used with the Moonshot toolkit."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License"
]

[tool.poetry]
name = "moonshot-data"
version = "0.7.2"
description = "A collection of data(e.g. llm connectors, benchmark tests) that can be used with the Moonshot toolkit."
authors = ["The Moonshot Team <our.moonshot.team@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
openai = "^1.51.0"
bert-score = "^0.3.13"
nltk = "^3.9.1"
py-readability-metrics = "^1.4.5"
rouge = "^1.0.1"
rouge-score = "^0.1.2"
aiometer = "^0.5.0"
aiohttp = "^3.10.8"
anthropic = "0.45.2"
spacy = "^3.7.5"
sentence-transformers = "^3.1.1"
pylcs = "^0.1.1"
together = "^1.3.0"
scipy = "^1.14.1"
textattack = "^0.3.10"
tensorflow-hub = "^0.16.1"
homoglyphs = "^2.0.4"
tensorflow = "^2.17.0"
urllib3 = "^2.2.3"
xgboost = "^2.1.1"
onnxruntime = "^1.19.2"
nudenet = "^3.4.2"
torchmetrics = "^1.4.2"
torchvision = "^0.22.1"
datasets = "^2.21.0"
pydantic = "2.8.2"
ragas = "^0.1.18"
google-generativeai = "^0.8.0"
h2ogpte = "^1.6.27.post1"
keras = "^3.9.2"
langchain = "^0.3.24"
pillow = "^11.3.0"
protobuf = "^5.29.5"
